--- a/Application/Student/View/Apply/changeJob.html
+++ b/Application/Student/View/Apply/changeJob.html
@@ -40,10 +40,9 @@
                         <div class="col-sm-4">
                             <div class="select" style="width: 210px;">
                                 <input type="hidden" name="type" id="type"/>
-                                <p><a href="javascript:void(0)">请选择变更类型</a></p>
+                                <p id="job"><a href="javascript:void(0)">岗位</a></p>
                                 <div class="ex">
                                     <p><a href="javascript:void(0)" id="corporation">单位</a></p>
-                                    <p><a href="javascript:void(0)" id="job">岗位</a></p>
                                 </div>
                             </div>
                         </div>
@@ -122,7 +121,7 @@
                         <p class="text-center">
                             <a href="javascript:void();" id="yfycms-button-submit" class="bt-btn1 style1">提交</a>
                             <span class="wh40"></span>
-                            <a href="javascript:void();" class="bt-btn1 style2">取消</a>
+                            <a href="/index.php?m=student&c=apply&a=change" class="bt-btn1 style2">取消</a>
                         </p>
                         </p>
                     </div>
@@ -164,9 +163,6 @@
     $("#corporation").click(function(){
         window.location.href='/index.php/student/Apply/changeCorporation';
     });
-    $("#job").click(function(){
-        $("#type").val(1);
-    });
     $(function(){
 
     });
@@ -175,6 +171,8 @@
         'jump_url' : '/index.php?m=student&c=apply&a=change',
     };
     $("#yfycms-button-submit").click(function(){
+        var type=$('#job').text();
+        $('input[name=type]').val(type);
         var data=$("#yfycms-form").serializeArray();
         postData={};
         $(data).each(function(i){
