--- a/Application/Student/View/Report/index.html
+++ b/Application/Student/View/Report/index.html
@@ -133,16 +133,7 @@
           </div>
           <div class="ht35"></div>
           <div class="ui-paging">
-            <span>共15页，共143条记录</span>
-            &nbsp;
-            <ul>
-              <li><a href=""><</a></li>
-              <li><a href="" class="on">1</a></li>
-              <li><a href="">2</a></li>
-              <li><a href="">3</a></li>
-              <li><a href="">4</a></li>
-              <li><a href="">></a></li>
-            </ul>
+           {$page}
             <div class="pull-left">
               <a href="" class="cbox"><i></i>全选</a>
             </div>
